# crossref-lmdb

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  docs.yml
docs/: cmd.rst  conf.py  create.rst  index.rst  reader.rst  update.rst
src/crossref_data_db/: __init__.py  cli.py
src/crossref_lmdb/: __init__.py  cli.py  create.py  date.py  db.py  file.py  filt.py  items.py  log.py  main.py  params.py  update.py  utils.py  web.py
tests/: conftest.py  test_date.py  test_db.py  test_file.py  test_filt.py  test_items.py  test_log.py  test_params.py  test_reader.py  test_update.py  test_web.py
tests/data/: eg_response_1.json  eg_response_2.json  eg_response_3.json  eg_total_response.json
